# SmartChessV2

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/saved_models/: metadata.json
demos/: __init__.py
demos/game/: gui.py  run_games.py  standard_model.py
demos/game_demos/: __init__.py  demo_game_gui.py  demo_game_random_agent.py  demo_game_random_model.py  demo_game_standard_model.py
demos/model/: saving.py
demos/model_demos/: __init__.py  demo_model_batch_prediction.py  seed_model_strains.py
graphs/: Example Game Trajectory Board Eval Uncorrelated
modules/: __init__.py  agent.py  board.py  chess_types.py  collector.py  config.py  conventions.py  display.py  game.py  model.py  model_config.py  tools.py  utils.py
tests/: __init__.py  test_agent.py  test_board.py  test_display.py  test_game.py  test_model.py  test_tools.py  test_utils.py
tests/data/: test_castling.npy  test_default_board_encoding.npy  test_en_passant.npy  test_encoding_after_move.npy  test_position_black_board_encoding.npy  test_position_black_move_encoding.npy  test_position_black_move_start_encoding.npy  test_position_board_initial_encoding.npy  test_position_white_board_encoding.npy  test_position_white_move_encoding.npy  test_position_white_move_start_encoding.npy  test_promotion.npy  test_repeated_position_black_encoding.npy  test_repeated_position_white_encoding.npy
